--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="row" >
+  	<div class="span3 well well-small"
+		<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  	<%= devise_error_messages! %>
+		<fieldset>
+	      <legend>Forgot your password?</legend>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+		  	<div><%= f.input :email, autofocus: true %></div>
+			<div><%= f.button :submit, "Reset password instructions" %></div>
+		</fieldset>	
+		<% end %>
+	</div>
+
+	<div class="span8">
+    <h4>Just enter your Email and we will send you instuctions on how to reset you password.</h4>
+  	</div>
+</div>
+
+<div class="row">
+  <div class="span4">
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
