--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,33 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div>
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
+    <%= f.input :first_name %>
   </div>
 
   <div>
-    <%= f.label :Last_name %><br />
-    <%= f.text_field :Last_name %>
+    <%= f.input :Last_name %>
   </div>
 
   <div>
-    <%= f.label :profile_name %><br />
-    <%= f.text_field :profile_name %>
+    <%= f.input :profile_name %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div>
+    <%= f.input :email, autofocus: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.input :password, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div>
+    <%= f.input :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="actions">
