--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,20 @@
-<h2>Resend unlock instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="row" >
+  <div class="span3 well well-small"
+	
+	<%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+	<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+	<fieldset>
+      <legend>Resend unlock instructions</legend>
+		  <div>
+		    <%= f.input :email, autofocus: true %>
+		  </div>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+		  <div>
+		    <%= f.button :submit, "Resend unlock instructions" %>
+		  </div>
+  	</fieldset>
+	<% end %>
 
 <%= render "devise/shared/links" %>
