--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Name:</b>
-  <%= @status.user.first_name %>
+  <%= @status.user.first_name %> <%= @status.user.Last_name %>
 </p>
 
 <p>
